// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert close 1`] = `
<div>
  <div
    className="Component-alert-0-1-72"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-71"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-70"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-80"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-79"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-78"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-88"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-87"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-86"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-96"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-95"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-94"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-104"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-103"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-102"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-112"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-111"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-110"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-120"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-119"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-118"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <div
    className="Component-alert-0-1-128"
  >
    A simple primary alert with a example 
    <a
      className="Component-alertLink-0-1-127"
      href="#"
    >
      link
    </a>
    <button
      className="Component-close-0-1-126"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Alert theme 1`] = `
<div>
  <div
    className="Component-alert-0-1-8"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-1-16"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-1-24"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-1-32"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-1-40"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-1-48"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-1-56"
  >
    Something happened, please check it out!
  </div>
  <div
    className="Component-alert-0-1-64"
  >
    Something happened, please check it out!
  </div>
</div>
`;

exports[`Storyshots Badge button 1`] = `
<div>
  <button
    className="Component-container-0-1-142"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-143"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-149"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-150"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-156"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-157"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-163"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-164"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-170"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-171"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-177"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-178"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-184"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-185"
    >
      4
    </span>
  </button>
  <button
    className="Component-container-0-1-191"
    type="button"
  >
    Notifications 
    <span
      className="Component-badge-0-1-192"
    >
      4
    </span>
  </button>
</div>
`;

exports[`Storyshots Badge header 1`] = `
<div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-1-129"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-1-129"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-1-129"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-1-129"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-1-129"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-1-129"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-1-130"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-1-130"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-1-130"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-1-130"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-1-130"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-1-130"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-1-131"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-1-131"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-1-131"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-1-131"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-1-131"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-1-131"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-1-132"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-1-132"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-1-132"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-1-132"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-1-132"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-1-132"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-1-133"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-1-133"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-1-133"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-1-133"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-1-133"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-1-133"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-1-134"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-1-134"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-1-134"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-1-134"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-1-134"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-1-134"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-1-135"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-1-135"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-1-135"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-1-135"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-1-135"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-1-135"
      >
        123
      </span>
    </h6>
  </div>
  <div>
    <h1>
      Example heading 
      <span
        className="Component-badge-0-1-136"
      >
        123
      </span>
    </h1>
    <h2>
      Example heading 
      <span
        className="Component-badge-0-1-136"
      >
        123
      </span>
    </h2>
    <h3>
      Example heading 
      <span
        className="Component-badge-0-1-136"
      >
        123
      </span>
    </h3>
    <h4>
      Example heading 
      <span
        className="Component-badge-0-1-136"
      >
        123
      </span>
    </h4>
    <h5>
      Example heading 
      <span
        className="Component-badge-0-1-136"
      >
        123
      </span>
    </h5>
    <h6>
      Example heading 
      <span
        className="Component-badge-0-1-136"
      >
        123
      </span>
    </h6>
  </div>
</div>
`;

exports[`Storyshots Badge link 1`] = `
<div>
  <a
    className="Component-btnInsideLink-0-1-209"
    href="#"
  >
    badgePrimary
  </a>
  <a
    className="Component-btnInsideLink-0-1-210"
    href="#"
  >
    badgeSecondary
  </a>
  <a
    className="Component-btnInsideLink-0-1-211"
    href="#"
  >
    badgeSuccess
  </a>
  <a
    className="Component-btnInsideLink-0-1-212"
    href="#"
  >
    badgeInfo
  </a>
  <a
    className="Component-btnInsideLink-0-1-213"
    href="#"
  >
    badgeWarning
  </a>
  <a
    className="Component-btnInsideLink-0-1-214"
    href="#"
  >
    badgeDanger
  </a>
  <a
    className="Component-btnInsideLink-0-1-215"
    href="#"
  >
    badgeLight
  </a>
  <a
    className="Component-btnInsideLink-0-1-216"
    href="#"
  >
    badgeDark
  </a>
</div>
`;

exports[`Storyshots Badge pill 1`] = `
<div>
  <span
    className="Component-badgePill-0-1-201"
  >
    badgePrimary
  </span>
  <span
    className="Component-badgePill-0-1-202"
  >
    badgeSecondary
  </span>
  <span
    className="Component-badgePill-0-1-203"
  >
    badgeSuccess
  </span>
  <span
    className="Component-badgePill-0-1-204"
  >
    badgeInfo
  </span>
  <span
    className="Component-badgePill-0-1-205"
  >
    badgeWarning
  </span>
  <span
    className="Component-badgePill-0-1-206"
  >
    badgeDanger
  </span>
  <span
    className="Component-badgePill-0-1-207"
  >
    badgeLight
  </span>
  <span
    className="Component-badgePill-0-1-208"
  >
    badgeDark
  </span>
</div>
`;

exports[`Storyshots Badge span 1`] = `
<div>
  <span
    className="Component-badge-0-1-193"
  >
    badgePrimary
  </span>
  <span
    className="Component-badge-0-1-194"
  >
    badgeSecondary
  </span>
  <span
    className="Component-badge-0-1-195"
  >
    badgeSuccess
  </span>
  <span
    className="Component-badge-0-1-196"
  >
    badgeInfo
  </span>
  <span
    className="Component-badge-0-1-197"
  >
    badgeWarning
  </span>
  <span
    className="Component-badge-0-1-198"
  >
    badgeDanger
  </span>
  <span
    className="Component-badge-0-1-199"
  >
    badgeLight
  </span>
  <span
    className="Component-badge-0-1-200"
  >
    badgeDark
  </span>
</div>
`;

exports[`Storyshots Breadcrumb breadcrumb 1`] = `
<div>
  <nav>
    <ol
      className="Component-breadcrumb-0-1-218"
    >
      <li
        className="Component-breadcrumbItem-0-1-219"
      >
        Home
      </li>
    </ol>
  </nav>
  <nav>
    <ol
      className="Component-breadcrumb-0-1-218"
    >
      <li
        className="Component-breadcrumbItem-0-1-219"
      >
        <a
          href="#"
        >
          Home
        </a>
      </li>
      <li
        className="Component-breadcrumbItem-0-1-219"
      >
        Library
      </li>
    </ol>
  </nav>
  <nav>
    <ol
      className="Component-breadcrumb-0-1-218"
    >
      <li
        className="Component-breadcrumbItem-0-1-219"
      >
        <a
          href="#"
        >
          Home
        </a>
      </li>
      <li
        className="Component-breadcrumbItem-0-1-219"
      >
        <a
          href="#"
        >
          Library
        </a>
      </li>
      <li
        className="Component-breadcrumbItem-0-1-219"
      >
        Data
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Storyshots Button button 1`] = `
<div>
  <button
    className="Component-btn-0-1-225"
  >
    primary
  </button>
  <button
    className="Component-btn-0-1-231"
  >
    primary
  </button>
  <button
    className="Component-btn-0-1-237"
  >
    primary
  </button>
  <button
    className="Component-btn-0-1-243"
  >
    primary
  </button>
  <button
    className="Component-btn-0-1-249"
  >
    primary
  </button>
  <button
    className="Component-btn-0-1-255"
  >
    primary
  </button>
  <button
    className="Component-btn-0-1-261"
  >
    primary
  </button>
  <button
    className="Component-btn-0-1-267"
  >
    primary
  </button>
</div>
`;

exports[`Storyshots Button groups 1`] = `
<div>
  <div
    className="Component-btnContainer-0-1-279 Component-reboot-0-1-273 Component-btnGroup-0-1-269 Component-btnGroupToggle-0-1-270"
  >
    <label
      className="Component-btnActivethemeColor-0-1-280 Component-btn-0-1-268 Component-themeColor-0-1-274 Component-active-0-1-275"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-281 Component-btn-0-1-268 Component-themeColor-0-1-274"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-281 Component-btn-0-1-268 Component-themeColor-0-1-274"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-293 Component-reboot-0-1-287 Component-btnGroup-0-1-283 Component-btnGroupToggle-0-1-284"
  >
    <label
      className="Component-btnActivethemeColor-0-1-294 Component-btn-0-1-282 Component-themeColor-0-1-288 Component-active-0-1-289"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-295 Component-btn-0-1-282 Component-themeColor-0-1-288"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-295 Component-btn-0-1-282 Component-themeColor-0-1-288"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-307 Component-reboot-0-1-301 Component-btnGroup-0-1-297 Component-btnGroupToggle-0-1-298"
  >
    <label
      className="Component-btnActivethemeColor-0-1-308 Component-btn-0-1-296 Component-themeColor-0-1-302 Component-active-0-1-303"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-309 Component-btn-0-1-296 Component-themeColor-0-1-302"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-309 Component-btn-0-1-296 Component-themeColor-0-1-302"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-321 Component-reboot-0-1-315 Component-btnGroup-0-1-311 Component-btnGroupToggle-0-1-312"
  >
    <label
      className="Component-btnActivethemeColor-0-1-322 Component-btn-0-1-310 Component-themeColor-0-1-316 Component-active-0-1-317"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-323 Component-btn-0-1-310 Component-themeColor-0-1-316"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-323 Component-btn-0-1-310 Component-themeColor-0-1-316"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-335 Component-reboot-0-1-329 Component-btnGroup-0-1-325 Component-btnGroupToggle-0-1-326"
  >
    <label
      className="Component-btnActivethemeColor-0-1-336 Component-btn-0-1-324 Component-themeColor-0-1-330 Component-active-0-1-331"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-337 Component-btn-0-1-324 Component-themeColor-0-1-330"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-337 Component-btn-0-1-324 Component-themeColor-0-1-330"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-349 Component-reboot-0-1-343 Component-btnGroup-0-1-339 Component-btnGroupToggle-0-1-340"
  >
    <label
      className="Component-btnActivethemeColor-0-1-350 Component-btn-0-1-338 Component-themeColor-0-1-344 Component-active-0-1-345"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-351 Component-btn-0-1-338 Component-themeColor-0-1-344"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-351 Component-btn-0-1-338 Component-themeColor-0-1-344"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-363 Component-reboot-0-1-357 Component-btnGroup-0-1-353 Component-btnGroupToggle-0-1-354"
  >
    <label
      className="Component-btnActivethemeColor-0-1-364 Component-btn-0-1-352 Component-themeColor-0-1-358 Component-active-0-1-359"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-365 Component-btn-0-1-352 Component-themeColor-0-1-358"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-365 Component-btn-0-1-352 Component-themeColor-0-1-358"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
  <div
    className="Component-btnContainer-0-1-377 Component-reboot-0-1-371 Component-btnGroup-0-1-367 Component-btnGroupToggle-0-1-368"
  >
    <label
      className="Component-btnActivethemeColor-0-1-378 Component-btn-0-1-366 Component-themeColor-0-1-372 Component-active-0-1-373"
    >
      <input
        id="option1"
        name="options"
        type="radio"
      />
       checked
    </label>
    <label
      className="Component-btnThemeColor-0-1-379 Component-btn-0-1-366 Component-themeColor-0-1-372"
    >
      <input
        id="option2"
        name="options"
        type="radio"
      />
       Radio
    </label>
    <label
      className="Component-btnThemeColor-0-1-379 Component-btn-0-1-366 Component-themeColor-0-1-372"
    >
      <input
        id="option3"
        name="options"
        type="radio"
      />
       Radio
    </label>
  </div>
</div>
`;

exports[`Storyshots Button sizes 1`] = `
<div>
  <button
    className="Component-btnPrimaryLarge-0-1-393 Component-btnMargin-0-1-392 Component-reboot-0-1-384 Component-btn-0-1-380 Component-btnLg-0-1-382 Component-primaryColor-0-1-385"
    type="button"
  >
    Primary Large
  </button>
  <button
    className="Component-btnSecondaryLarge-0-1-394 Component-btnMargin-0-1-392 Component-reboot-0-1-384 Component-btn-0-1-380 Component-btnLg-0-1-382 Component-secondaryColor-0-1-386"
    type="button"
  >
    Secondary Large
  </button>
  <button
    className="Component-btnPrimarySmall-0-1-395 Component-btnMargin-0-1-392 Component-reboot-0-1-384 Component-btn-0-1-380 Component-btnSm-0-1-383 Component-primaryColor-0-1-385"
    type="button"
  >
    Primary Small
  </button>
  <button
    className="Component-btnSecondarySmall-0-1-396 Component-btnMargin-0-1-392 Component-reboot-0-1-384 Component-btn-0-1-380 Component-btnSm-0-1-383 Component-secondaryColor-0-1-386"
    type="button"
  >
    Secondary Small
  </button>
  <button
    className="Component-btnPrimaryBlock-0-1-397 Component-btnMargin-0-1-392 Component-reboot-0-1-384 Component-btn-0-1-380 Component-btnBlock-0-1-381 Component-primaryColor-0-1-385"
    type="button"
  >
    Primary Block
  </button>
  <button
    className="Component-btnSecondaryBlock-0-1-398 Component-btnMargin-0-1-392 Component-reboot-0-1-384 Component-btn-0-1-380 Component-btnBlock-0-1-381 Component-secondaryColor-0-1-386"
    type="button"
  >
    Secondar Block
  </button>
</div>
`;

exports[`Storyshots Button states 1`] = `
<div>
  <button
    className="Component-btnPrimaryLarge-0-1-411 Component-btnMargin-0-1-410 Component-btn-0-1-399 Component-btnLg-0-1-401 Component-primaryColor-0-1-403"
    disabled={true}
    type="button"
  >
    Primary Large
  </button>
  <button
    className="Component-btnSecondaryLarge-0-1-412 Component-btnMargin-0-1-410 Component-btn-0-1-399 Component-btnLg-0-1-401 Component-secondaryColor-0-1-404"
    disabled={true}
    type="button"
  >
    Secondary Large
  </button>
  <a
    className="Component-btnPrimaryLargeDisabled-0-1-413 Component-btnMargin-0-1-410 Component-btn-0-1-399 Component-btnLg-0-1-401 Component-primaryColor-0-1-403 Component-disabled-0-1-406 Component-btnLink-0-1-402"
    href="#"
  >
    Primary link
  </a>
  <a
    className="Component-btnSecondaryLargeDisabled-0-1-414 Component-btnMargin-0-1-410 Component-btn-0-1-399 Component-btnLg-0-1-401 Component-secondaryColor-0-1-404 Component-disabled-0-1-406 Component-btnLink-0-1-402"
    href="#"
  >
    Link
  </a>
</div>
`;

exports[`Storyshots Button toolbar 1`] = `
<div
  className="Component-btnToolbar-0-1-415"
>
  <div
    className="Component-btnGroup-0-1-417"
  >
    <button
      className="Component-btnPrimary-0-1-428 Component-btn-0-1-416 Component-primaryColor-0-1-418"
      type="button"
    >
      1
    </button>
    <button
      className="Component-btnPrimary-0-1-428 Component-btn-0-1-416 Component-primaryColor-0-1-418"
      type="button"
    >
      2
    </button>
    <button
      className="Component-btnPrimary-0-1-428 Component-btn-0-1-416 Component-primaryColor-0-1-418"
      type="button"
    >
      3
    </button>
    <button
      className="Component-btnPrimary-0-1-428 Component-btn-0-1-416 Component-primaryColor-0-1-418"
      type="button"
    >
      4
    </button>
  </div>
  <div
    className="Component-btnGroup-0-1-417"
  >
    <button
      className="Component-btnSecondary-0-1-429 Component-btn-0-1-416 Component-secondaryColor-0-1-419"
      type="button"
    >
      5
    </button>
    <button
      className="Component-btnSecondary-0-1-429 Component-btn-0-1-416 Component-secondaryColor-0-1-419"
      type="button"
    >
      6
    </button>
    <button
      className="Component-btnSecondary-0-1-429 Component-btn-0-1-416 Component-secondaryColor-0-1-419"
      type="button"
    >
      7
    </button>
  </div>
  <div
    className="Component-btnGroup-0-1-417"
  >
    <button
      className="Component-dangerColor-0-1-420"
      type="button"
    >
      8
    </button>
  </div>
</div>
`;

exports[`Storyshots Card card 1`] = `
<div
  className="Component-card-0-1-442"
>
  <img
    className="Component-cardImgTop-0-1-437"
    src="img/286_180.svg"
  />
  <div
    className="Component-cardBody-0-1-438"
  >
    <h5
      className="Component-cardTitle-0-1-439"
    >
      Card title
    </h5>
    <p
      className="Component-cardText-0-1-440"
    >
      Some quick example text to build on the card title and make up the bulk of the card's content.
    </p>
    <a
      className="Component-btnPrimary-0-1-441"
      href="#"
    >
      Go somewhere
    </a>
  </div>
</div>
`;
